JCRVLT-247 Java 9 Support
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/commons/filevault/trunk@1816641 13f79535-47bb-0310-9956-ffa450edef68